# message-queue

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  cert.der  example.md
.cargo/: config.toml
.github/workflows/: ci.yml
docker-util/: ssh_config  test-ssh.sh
docs/mqtt/: checklist.md
fuzz/: Cargo.toml
fuzz/dicts/: client_id  mqtt_proto_v4  mqtt_proto_v5  trie
fuzz/fuzz_targets/: client_id.rs  rumqtt_proto_v4.rs  rumqtt_proto_v5.rs  trie.rs
helm/foxmq/: Chart.yaml  README.md  values.yaml
helm/foxmq/templates/: _helpers.tpl  deployment-bytehound.yaml  deployment-foxmq.yaml  pvc-bytehound.yaml  secret-bytehound.yaml  service-bytehound.yaml  service-foxmq.yaml
helm/metrics/: Chart.yaml  values.yaml
helm/metrics/templates/: NOTES.txt  _helpers.tpl  configmap-runner.yaml  deployment-influxdb.yaml  job-publisher.yaml  job-runner.yaml  job-subscriber.yaml  role.yaml  rolebinding.yaml  secret.yaml  service-influxdb.yaml  serviceaccount.yaml
k8s/demo/: README.md  backend-config.yaml  configmap-config.yaml  gen-secrets.sh  ingress.yaml  service-cluster.yaml  service-websockets.yaml  stateful-set.yaml
k8s/demo/europe-west2/: ingress.yaml  managed-certificate.yaml
k8s/demo/us-south1/: managed-certificate.yaml
metrics/: Cargo.toml
metrics/src/: lib.rs  resources.rs
rumqttd-protocol/: Cargo.toml
rumqttd-protocol/src/: lib.rs
rumqttd-protocol/src/protocol/: mod.rs
rumqttd-protocol/src/protocol/v4/: connack.rs  connect.rs  disconnect.rs  mod.rs  ping.rs  puback.rs  pubcomp.rs  publish.rs  pubrec.rs  pubrel.rs  suback.rs  subscribe.rs  unsuback.rs  unsubscribe.rs
rumqttd-protocol/src/protocol/v5/: connack.rs  connect.rs  disconnect.rs  mod.rs  ping.rs  puback.rs  pubcomp.rs  publish.rs  pubrec.rs  pubrel.rs  suback.rs  subscribe.rs  unsuback.rs  unsubscribe.rs
rumqttd-router/: Cargo.toml
rumqttd-router/src/: lib.rs
rumqttd-shim/: Cargo.toml
rumqttd-shim/src/: lib.rs
src/: args.rs  collections.rs  config.rs  lib.rs  main.rs  mqtt.rs  password.rs  tce_message.rs  transaction.rs
src/cli/: address_book.rs  mod.rs  run.rs  user.rs
src/config/: acl.rs  addresses.rs  mod.rs  permissions.rs  users.rs
src/mqtt/: broker.rs  client_id.rs  connect.rs  connection.rs  keep_alive.rs  mailbox.rs  mod.rs  packets.rs  publish.rs  retain.rs  router.rs  session.rs
src/mqtt/broker/: connection.rs  mod.rs  socket.rs  tls.rs  websocket.rs
src/mqtt/trie/: filter.rs  mod.rs  node.rs  visitor.rs
src/trie/: filter.rs  mod.rs  node.rs  visitor.rs
tests/: .gitignore  Dockerfile  docker-compose.yaml  package-lock.json  package.json  run.sh
tests/dmq/: address-book.toml  key_0.crt  key_0.pub  key_1.pub
tests/dmq-local/: address-book.toml  key_1.pem
tests/foxmq-local.d/: address-book.toml
tests/foxmq-root-ca.d/: address-book.toml  ca.crt  ca.csr  ca.pem  ca.srl  docker-compose.yaml  key_0.crt  key_0.csr  key_0.pem  key_1.crt  key_1.csr  key_1.pem  key_2.crt  key_2.csr  key_2.pem  key_3.crt  key_3.csr  key_3.pem  x509.ext
tests/foxmq.d/: address-book.toml  cla.toml  key_0.pem  key_1.crt  permissions.toml  users.toml
tests/mqtt/: consensus-timestamps.test.js  distribution.test.js  root-ca.test.js
tests/standalone/user-property/: Cargo.toml
tests/standalone/user-property/src/: main.rs
