[workspace]
members = [".", "rumqttd-shim"]

[package]
name = "tashi-message-queue"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "tashi-message-queue"

[dependencies.tashi-consensus-engine]
git = "ssh://git@github.com/tashigg/tashi-consensus-engine"
rev = "a87e2453ffca6fd2fdc200b895edfc0c69f1810a"

[dependencies.tashi-collections]
git = "ssh://git@github.com/tashigg/tashi-consensus-engine"
rev = "a87e2453ffca6fd2fdc200b895edfc0c69f1810a"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
bytes = "1.5.0"
color-eyre = "0.6.2"
dialoguer = "0.11.0"
dotenvy = "0.15.7"
hex = "0.4.3"
num_enum = "0.7.2"
rand = "0.8.5"
rumqttd-shim = { path = "rumqttd-shim" }
serde = { version = "1.0.196", features = ["derive", "std"] }
thiserror = "1.0.56"
toml = { version = "0.8.10", features = ["parse"] }
tracing = "0.1.40"
triomphe = "0.1.11"
tokio-util = "0.7.10"
der = { version = "0.7.8", features = ["derive"] }
futures = { version = "0.3.30", features = ["std", "alloc"] }
slotmap = "1.0.7"

[dependencies.clap]
version = "4.5.0"
features = ["derive", "env"]

[dependencies.tokio]
version = "1.35.1"
features = ["full"]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["json", "env-filter"]

# Recommended by `color-eyre` to improve performance:
# https://docs.rs/color-eyre/latest/color_eyre/#improving-perf-on-debug-builds
[profile.dev.package.backtrace]
opt-level = 3

[profile.dev.package.tokio]
opt-level = 3

[profile.dev.package.argon2]
opt-level = 3
