[workspace]
members = [".", "rumqttd-protocol", "fuzz", "metrics"]

[package]
name = "foxmq"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "foxmq"

[workspace.dependencies]
color-eyre = "0.6.2"
dotenvy = "0.15.7"
rand = "0.8.5"
tokio-util = "0.7.10"
tracing = "0.1.40"

[workspace.dependencies.clap]
version = "4.5.0"
features = ["derive", "env"]

[workspace.dependencies.futures]
version = "0.3.30"
features = ["std", "alloc"]

# Rename our in-tree copy of `rumqttd` to prevent confusion with the published crate.
[workspace.dependencies.rumqttd-protocol]
path = "rumqttd-protocol"
package = "rumqttd"

[workspace.dependencies.tokio]
version = "1.35.1"
features = ["full"]

[workspace.dependencies.tracing-subscriber]
version = "0.3.18"
features = ["json", "env-filter"]

[dependencies.tashi-consensus-engine]
git = "ssh://git@github.com/tashigg/tashi-consensus-engine"
rev = "1eee142878381bea9fb8660a509b88d571152ebc"

[dependencies.tashi-collections]
git = "ssh://git@github.com/tashigg/tashi-consensus-engine"
rev = "1eee142878381bea9fb8660a509b88d571152ebc"

[dependencies]
arbitrary = { version = "1", optional = true, features = ["derive"] }
argon2 = { version = "0.5.3", features = ["std"] }
bytes = "1.5.0"
clap.workspace = true
color-eyre.workspace = true
der = { version = "0.7.8", features = ["derive"] }
dialoguer = "0.11.0"
dotenvy.workspace = true
futures.workspace = true
hex = "0.4.3"
num_enum = "0.7.2"
rand.workspace = true
rumqttd-protocol.workspace = true
rustls-pemfile = "1.0.4"
serde = { version = "1.0.196", features = ["derive", "std"] }
slotmap = "1.0.7"
thiserror = "1.0.56"
tokio.workspace = true
# TODO: upgrade RusTLS in TCE and message-queue [TG-461]
tokio-rustls = "0.24.1"
tokio-util.workspace = true
toml = { version = "0.8.10", features = ["parse"] }
tracing.workspace = true
tracing-subscriber.workspace = true
triomphe = "0.1.11"

# Recommended by `color-eyre` to improve performance:
# https://docs.rs/color-eyre/latest/color_eyre/#improving-perf-on-debug-builds
[profile.dev.package.backtrace]
opt-level = 3

[profile.dev.package.tokio]
opt-level = 3

[profile.dev.package.argon2]
opt-level = 3

[dev-dependencies]
expect-test = "1.4.1"
