[workspace]
members = [".", "rumqttd-protocol", "fuzz"]

[workspace.dependencies]
# Rename our in-tree copy of `rumqttd` to prevent confusion with the published crate.
rumqttd-protocol = { path = "rumqttd-protocol", package = "rumqttd" }

[workspace.dependencies.tokio]
version = "1.35.1"
features = ["full"]

[package]
name = "foxmq"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "foxmq"

[dependencies.tashi-consensus-engine]
git = "ssh://git@github.com/tashigg/tashi-consensus-engine"
rev = "7378c531021a72f67e369c18cbcbe16af5c63ea9"

[dependencies.tashi-collections]
git = "ssh://git@github.com/tashigg/tashi-consensus-engine"
rev = "7378c531021a72f67e369c18cbcbe16af5c63ea9"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
bytes = "1.5.0"
color-eyre = "0.6.2"
dialoguer = "0.11.0"
tokio = { workspace = true }
dotenvy = "0.15.7"
hex = "0.4.3"
num_enum = "0.7.2"
rand = "0.8.5"
rumqttd-protocol.workspace = true
serde = { version = "1.0.196", features = ["derive", "std"] }
thiserror = "1.0.56"
toml = { version = "0.8.10", features = ["parse"] }
tracing = { version = "0.1.40", features = ["attributes"] }
triomphe = "0.1.11"
tokio-util = "0.7.10"
der = { version = "0.7.9", features = ["derive"] }
futures = { version = "0.3.30", features = ["std", "alloc"] }
slotmap = "1.0.7"
arbitrary = { version = "1", optional = true, features = ["derive"] }
# TODO: upgrade RusTLS in TCE and message-queue [TG-461]
tokio-rustls = "0.24.1"
rustls-pemfile = "1.0.4"
time = { version = "0.3.36", features = ["formatting"] }

[dependencies.clap]
version = "4.5.0"
features = ["derive", "env"]


[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["json", "env-filter"]

# For Websockets (and later, possibly HTTP API) support
[dependencies.axum]
version = "0.7.5"
features = ["ws"]

# Recommended by `color-eyre` to improve performance:
# https://docs.rs/color-eyre/latest/color_eyre/#improving-perf-on-debug-builds
[profile.dev.package.backtrace]
opt-level = 3

[profile.dev.package.tokio]
opt-level = 3

[profile.dev.package.argon2]
opt-level = 3

[dev-dependencies]
expect-test = "1.4.1"
