[package]
name = "rumqttd-shim"
version = "0.1.0"
edition = "2021"


[dependencies]
bytes = { version = "1", features = ["serde"] }
flume = { version = "0.11.0", default-features = false, features = ["async"] }
parking_lot = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
slab = "0.4.9"
thiserror = "1.0.49"
tracing = { version="0.1", features = ["log"] }

[dev-dependencies]
# Dependencies required for our source-based import of rumqtt
pretty_assertions = "1.4.0"
